--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,10 @@ h1:after, h2:after {
   -moz-transition: all .1s linear;
   transition: all .1s linear;
 }
+
+.hr-separator {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 35px;
+  margin-bottom: 35px;
+  width: 50%;
+}
