--- a/src/components/Photo/Photo.css
+++ b/src/components/Photo/Photo.css
@@ -1,6 +1,3 @@
-.sample-image {
-  width: 200px;
-  height: 200px;
-  background-color: #cdcdcd;
-  margin: 5px auto;
+.engagement-photo {
+  margin: 15px 0;
 }
