--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -2,7 +2,7 @@
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .timeline::after {
@@ -60,7 +60,9 @@
 }
 
 .timeline-title {
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #03256C;
   margin: 0;
 }
 
